--- a/pkgdown/extra.css
+++ b/pkgdown/extra.css
@@ -1,4 +1,3 @@
-
 .data-science-workshops-logo {
   height: 60px;
 }
@@ -7,4 +6,14 @@
   vertical-align: baseline;
   margin: -31px 2px -8px 2px;
   height: 50px;
+}
+
+.navbar-brand {
+  padding: 0 54px 0 54px;
+  height: 50px;
+  line-height: 50px;
+  background-image: url(logo.svg);
+  background-size: 32px auto;
+  background-repeat: no-repeat;
+  background-position: 15px center;
 }
