--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,11 +1,5 @@
-.data-science-workshops-logo {
-  height: 60px;
-}
-
-.copyright .data-science-workshops-logo {
-  vertical-align: baseline;
-  margin: -31px 2px -8px 2px;
-  height: 50px;
+.template-home aside .links ul li:first-child {
+  display: none;
 }
 
 .navbar-brand {
